# Perpus_Digital

./: .gitattributes  .gitignore  CMakeLists.txt  DATA_STRUCTURES_IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.cpp  SETUP_FIX_REPORT.md  TESTING_GUIDE.md  main.cpp  package-lock.json  populate_db.ps1  setup_database.ps1
backend/: BST_Implementation.cpp  Book.cpp  Book.h  BookManager.cpp  BookManager.cpp.broken  BookManager.h  DatabaseManager.cpp  DatabaseManager.h  Graph.h  PriorityQueue_Implementation.cpp  Queue_Implementation.cpp  Searching.h  Sorting.h  Stack_Implementation.cpp  example_usage.cpp  test_backend.h
data/: books.json
ui/: AddBookDialog.cpp  AddBookDialog.h  AddBookDialog_NEW.cpp  AddBookPage.cpp  AddBookPage.h  AddBookPage_NEW.cpp  BookCardWidget.cpp  BookCardWidget.h  BookPreviewDialog.cpp  BookPreviewDialog.h  BooksCollectionPage.cpp  BooksCollectionPage.h  BooksCollectionPage_NEW.cpp  BorrowQueuePage.cpp  BorrowQueuePage.h  BorrowQueuePage_NEW.cpp  DashboardPage.cpp  DashboardPage.h  PopularBooksPage.cpp  PopularBooksPage.h  PopularBooksPage_NEW.cpp  RecommendationPage.cpp  RecommendationPage.h  RecommendationPage_NEW.cpp  StatisticsPage.cpp  StatisticsPage.h  StatisticsPage_NEW.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
